--- a/Project_RL/internal_tests.ipynb
+++ b/Project_RL/internal_tests.ipynb
@@ -9,10 +9,11 @@
     "import env\n",
     "import actor\n",
     "import matplotlib.pyplot as plt\n",
+    "import env\n",
     "\n",
     "path_to_data = 'train.xlsx'\n",
     "moving_avg_actor = actor.MovingAverageActor(path_to_data)\n",
-    "\n",
+    "environment = env.DataCenterEnv(path_to_data)\n",
     "\n",
     "def plot_price_and_moving_avg(day, moving_avg, price):\n",
     "    \"\"\"\n",
@@ -38,18 +39,40 @@
     "    \n",
     "    # Show grid and plot\n",
     "    plt.grid(alpha=0.3)\n",
-    "    plt.show()\n"
+    "\n",
+    "\n",
+    "print(type(moving_avg_actor.price_values))\n",
+    "\n",
+    "test = False\n",
+    "if test:\n",
+    "    days = [i for i in range(7)]\n",
+    "    for day in days:\n",
+    "        state = environment.observation()\n",
+    "        data = moving_avg_actor.act(state)\n",
+    "        avg, price = data\n",
+    "        plot_price_and_moving_avg(day, avg, price)\n",
+    "        environment.step()\n",
+    "\n",
+    "    plt.show()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".conda",
+   "display_name": "prl_env",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.11"
   }
  },
