--- a/Project_RL/internal_tests.ipynb
+++ b/Project_RL/internal_tests.ipynb
@@ -2,14 +2,101 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'numpy.ndarray'>\n"
+      "0\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(-1.0), np.float64(0.0), np.float64(1.0)]\n",
+      "1\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(0.0), np.float64(1.0), np.float64(2.0)]\n",
+      "2\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(1.0), np.float64(2.0), np.float64(3.0)]\n",
+      "3\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(2.0), np.float64(3.0), np.float64(4.0)]\n",
+      "4\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(3.0), np.float64(4.0), np.float64(5.0)]\n",
+      "5\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(4.0), np.float64(5.0), np.float64(6.0)]\n",
+      "6\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(5.0), np.float64(6.0), np.float64(7.0)]\n",
+      "7\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(6.0), np.float64(7.0), np.float64(8.0)]\n",
+      "8\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(7.0), np.float64(8.0), np.float64(9.0)]\n",
+      "9\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(8.0), np.float64(9.0), np.float64(10.0)]\n",
+      "10\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(9.0), np.float64(10.0), np.float64(11.0)]\n",
+      "11\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(10.0), np.float64(11.0), np.float64(12.0)]\n",
+      "12\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(11.0), np.float64(12.0), np.float64(13.0)]\n",
+      "13\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(12.0), np.float64(13.0), np.float64(14.0)]\n",
+      "14\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(13.0), np.float64(14.0), np.float64(15.0)]\n",
+      "15\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(14.0), np.float64(15.0), np.float64(16.0)]\n",
+      "16\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(15.0), np.float64(16.0), np.float64(17.0)]\n",
+      "17\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(16.0), np.float64(17.0), np.float64(18.0)]\n",
+      "18\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(17.0), np.float64(18.0), np.float64(19.0)]\n",
+      "19\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(18.0), np.float64(19.0), np.float64(20.0)]\n",
+      "20\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(19.0), np.float64(20.0), np.float64(21.0)]\n",
+      "21\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(20.0), np.float64(21.0), np.float64(22.0)]\n",
+      "22\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(21.0), np.float64(22.0), np.float64(23.0)]\n",
+      "23\n",
+      "[np.float64(0.0), np.float64(-1.0), np.float64(-2.0), np.float64(-3.0), np.float64(-4.0), np.float64(-5.0), np.float64(-6.0)]\n",
+      "[np.float64(22.0), np.float64(23.0), np.float64(24.0)]\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "positional indexers are out-of-bounds",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 44\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[38;5;28mprint\u001b[39m(day)\n\u001b[0;32m     43\u001b[0m state \u001b[38;5;241m=\u001b[39m environment\u001b[38;5;241m.\u001b[39mobservation()\n\u001b[1;32m---> 44\u001b[0m avg, price \u001b[38;5;241m=\u001b[39m \u001b[43mmoving_avg_actor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mact\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstate\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     45\u001b[0m moving_avgs\u001b[38;5;241m.\u001b[39mappend(avg)\n\u001b[0;32m     46\u001b[0m prices\u001b[38;5;241m.\u001b[39mappend(price)\n",
+      "File \u001b[1;32mc:\\Users\\bente\\Documents\\MSc_AI\\Project_RL\\Project_RL\\Project_RL\\actor.py:28\u001b[0m, in \u001b[0;36mMovingAverageActor.act\u001b[1;34m(self, state, window_size_d, hour_buffer)\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28mprint\u001b[39m(days)\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28mprint\u001b[39m(hours)\n\u001b[1;32m---> 28\u001b[0m subset \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprice_values\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43miloc\u001b[49m\u001b[43m[\u001b[49m\u001b[43mdays\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhours\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m     29\u001b[0m moving_average \u001b[38;5;241m=\u001b[39m subset\u001b[38;5;241m.\u001b[39mmean(axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[0;32m     30\u001b[0m \u001b[38;5;66;03m# TODO: pick an action based on moving average\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\bente\\anaconda3\\envs\\prl_env\\Lib\\site-packages\\pandas\\core\\indexing.py:1184\u001b[0m, in \u001b[0;36m_LocationIndexer.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   1182\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_is_scalar_access(key):\n\u001b[0;32m   1183\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj\u001b[38;5;241m.\u001b[39m_get_value(\u001b[38;5;241m*\u001b[39mkey, takeable\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_takeable)\n\u001b[1;32m-> 1184\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_getitem_tuple\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1185\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   1186\u001b[0m     \u001b[38;5;66;03m# we by definition only have the 0th axis\u001b[39;00m\n\u001b[0;32m   1187\u001b[0m     axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maxis \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;241m0\u001b[39m\n",
+      "File \u001b[1;32mc:\\Users\\bente\\anaconda3\\envs\\prl_env\\Lib\\site-packages\\pandas\\core\\indexing.py:1690\u001b[0m, in \u001b[0;36m_iLocIndexer._getitem_tuple\u001b[1;34m(self, tup)\u001b[0m\n\u001b[0;32m   1689\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m_getitem_tuple\u001b[39m(\u001b[38;5;28mself\u001b[39m, tup: \u001b[38;5;28mtuple\u001b[39m):\n\u001b[1;32m-> 1690\u001b[0m     tup \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_validate_tuple_indexer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtup\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1691\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m suppress(IndexingError):\n\u001b[0;32m   1692\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_lowerdim(tup)\n",
+      "File \u001b[1;32mc:\\Users\\bente\\anaconda3\\envs\\prl_env\\Lib\\site-packages\\pandas\\core\\indexing.py:966\u001b[0m, in \u001b[0;36m_LocationIndexer._validate_tuple_indexer\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    964\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(key):\n\u001b[0;32m    965\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 966\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_validate_key\u001b[49m\u001b[43m(\u001b[49m\u001b[43mk\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    967\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m    968\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    969\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLocation based indexing can only have \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    970\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m[\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_valid_types\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m] types\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    971\u001b[0m         ) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01merr\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\bente\\anaconda3\\envs\\prl_env\\Lib\\site-packages\\pandas\\core\\indexing.py:1612\u001b[0m, in \u001b[0;36m_iLocIndexer._validate_key\u001b[1;34m(self, key, axis)\u001b[0m\n\u001b[0;32m   1610\u001b[0m     \u001b[38;5;66;03m# check that the key does not exceed the maximum size of the index\u001b[39;00m\n\u001b[0;32m   1611\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(arr) \u001b[38;5;129;01mand\u001b[39;00m (arr\u001b[38;5;241m.\u001b[39mmax() \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m len_axis \u001b[38;5;129;01mor\u001b[39;00m arr\u001b[38;5;241m.\u001b[39mmin() \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m-\u001b[39mlen_axis):\n\u001b[1;32m-> 1612\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mIndexError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpositional indexers are out-of-bounds\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   1613\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   1614\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCan only index by location with a [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_valid_types\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mIndexError\u001b[0m: positional indexers are out-of-bounds"
      ]
     }
    ],
@@ -49,35 +136,33 @@
     "    plt.grid(alpha=0.3)\n",
     "\n",
     "\n",
-    "print(type(moving_avg_actor.price_values))\n",
-    "\n",
-    "test = False\n",
+    "test = True\n",
     "if test:\n",
-    "    days = [i for i in range(7)]\n",
+    "    days = range(len(environment.timestamps))\n",
+    "    moving_avgs = []\n",
+    "    prices = []\n",
     "    for day in days:\n",
+    "        print(day)\n",
     "        state = environment.observation()\n",
-    "        data = moving_avg_actor.act(state)\n",
-    "        avg, price = data\n",
-    "        plot_price_and_moving_avg(day, avg, price)\n",
-    "        environment.step()\n",
-    "\n",
-<<<<<<< HEAD
+    "        avg, price = moving_avg_actor.act(state)\n",
+    "        moving_avgs.append(avg)\n",
+    "        prices.append(price)\n",
+    "        environment.step(action=1)\n",
+    "    plot_price_and_moving_avg(days, moving_avgs, prices)\n",
     "    plt.show()"
-=======
-    "    plt.show()\n",
-    "\n",
-    "\n"
->>>>>>> c67b79ba6df4a18c42b68657ebe0ee9e73e471b6
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-<<<<<<< HEAD
    "display_name": "prl_env",
-=======
-   "display_name": "projectrl",
->>>>>>> c67b79ba6df4a18c42b68657ebe0ee9e73e471b6
    "language": "python",
    "name": "python3"
   },
@@ -91,11 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< HEAD
    "version": "3.11.11"
-=======
-   "version": "3.9.21"
->>>>>>> c67b79ba6df4a18c42b68657ebe0ee9e73e471b6
   }
  },
  "nbformat": 4,
