fixed label in plot

--- a/Project_RL/plots.ipynb
+++ b/Project_RL/plots.ipynb
@@ -742,7 +742,7 @@
     "\n",
     "    # Initialize a flag dictionary to track if labels have been added\n",
     "    label_flags = {'green': False, 'red': False, 'purple': False}\n",
-    "    label_tags = {'green': \"Cheap EMA's\", 'red': \"Expensive EMA\", 'purple': \"Excluded EMA's\"}\n",
+    "    label_tags = {'green': \"Cheap EMA's\", 'red': \"Expensive EMA's\", 'purple': \"Excluded EMA's\"}\n",
     "\n",
     "    # Plot horizontal dashes for means with specified colors\n",
     "    for i, (mean, color) in enumerate(zip(means, colors)):\n",
@@ -916,7 +916,7 @@
     "    agent = actor.SimpleMovingAverageActor()\n",
     "\n",
     "\n",
-    "test_range = list(range(7))\n",
+    "test_range = list(range(2,3))\n",
     "reward_per_year = []\n",
     "\n",
     "for t in test_range:\n",
@@ -952,8 +952,8 @@
     "    print(f'Reward per year for actor {actor_type}: {aggregate_reward / 3}') # devide by 2 if run on the test set\n",
     "    print(average_filled/amount_of_days)\n",
     "    print(len(plotting_data[0]))\n",
-    "    #plot_data_ema(plotting_data[:72])\n",
-    "    #plot_data_ema(plotting_data[-72:])\n",
+    "    plot_data_ema(plotting_data[:72])\n",
+    "    plot_data_ema(plotting_data[-72:])\n",
     "    reward_per_year.append(aggregate_reward / 3)\n",
     "\n",
     "\n",
