changed price bins and storage bins

--- a/scrap_paper.ipynb
+++ b/scrap_paper.ipynb
@@ -25,19 +25,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[4.31300000e+01 2.20000000e+01 7.29000000e+02 1.30000000e+02\n",
-      "  1.00000000e+00 2.86825466e+01]\n",
-      " [4.66200000e+01 2.30000000e+01 7.29000000e+02 1.40000000e+02\n",
-      "  5.00000000e-01 2.86825466e+01]\n",
-      " [4.11500000e+01 2.40000000e+01 7.29000000e+02 1.45000000e+02\n",
-      "  1.00000000e+00 2.86825466e+01]]\n"
+      "[[4.31300000e+01 2.20000000e+01 7.29000000e+02 9.00000000e+01\n",
+      "  1.00000000e+00 3.74904348e+01 2.35714286e+00]\n",
+      " [4.66200000e+01 2.30000000e+01 7.29000000e+02 1.00000000e+02\n",
+      "  1.00000000e+00 3.77040373e+01 2.35714286e+00]\n",
+      " [4.11500000e+01 2.40000000e+01 7.29000000e+02 1.10000000e+02\n",
+      "  0.00000000e+00 3.78794410e+01 3.00000000e-01]]\n"
      ]
     }
    ],
@@ -46,6 +46,26 @@
     "\n",
     "data = np.loadtxt(\"Project_RL/tab_q_val_trajectory.csv\", delimiter=\",\", skiprows=1)\n",
     "print(data[-3:None])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 50, 2: 60, 3: 70, 4: 80, 5: 90, 6: 100, 7: 110, 8: 120, 9: 130, 10: 140, 11: 150, 12: 160, 13: 170, 14: 170, 15: 170, 16: 170, 17: 170, 18: 170, 19: 170, 20: 170, 21: 170, 22: 170, 23: 170, 24: 170}\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = {k: 40 + (k*10) for k in range(1, 14)}\n",
+    "p = {k: 170 for k in range(14, 25)}\n",
+    "n = l | p\n",
+    "print(n)"
    ]
   },
   {
