--- a/scrap_paper.ipynb
+++ b/scrap_paper.ipynb
@@ -50,6 +50,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 50, 2: 60, 3: 70, 4: 80, 5: 90, 6: 100, 7: 110, 8: 120, 9: 130, 10: 140, 11: 150, 12: 160, 13: 170, 14: 170, 15: 170, 16: 170, 17: 170, 18: 170, 19: 170, 20: 170, 21: 170, 22: 170, 23: 170, 24: 170}\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = {k: (k+4)*10 for k in range(1, 13)}\n",
+    "l = {k+12: 170 for k in range(1, 13)}\n",
+    "h = f | l\n",
+    "print(h)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
